# Keten

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  readme.md
examples/: CMakeLists.txt
examples/example_node/: CMakeLists.txt  main.cpp
examples/example_validator/: CMakeLists.txt  main.cpp
src/: keten.h
src/keten/: block.h  blockchain.cpp  blockchain.h  crypto.cpp  crypto.h  keten.cpp  node.cpp  node.h  types.h
src/network/: P2PNetwork.cpp  P2PNetwork.h  messageQueue.h  messageTypes.h
